# pets

./: .gitignore  CMakeLists.txt  README.txt  build.cmd  pets.cmake
libraries/core/: CMakeLists.txt
libraries/core/include/: Callback.h  TemplateUtils.h  Utils.h  stddefs.h
libraries/core/include/application/: ApplicationBase.h  ApplicationEvent.h
libraries/core/include/files/: FileManager.h
libraries/core/include/network/: IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  UdpSocket.hpp
libraries/core/include/operations/: Operation.h  OperationDispatcher.h  OperationMainThread.h  OperationManager.h  OperationThread.h  OperationThreadBase.h  OperationThreadIds.h  SimpleOperation.h
libraries/core/include/tools/: Callback.h  JsonConfig.h  ParsedCommandLine.h  TimeState.h  Timer.h  Utils.h
libraries/core/src/: Utils.cpp
libraries/core/src/application/: ApplicationEvent.cpp
libraries/core/src/files/: FileManager.cpp
libraries/core/src/network/: IpAddress.cpp  Packet.cpp  Socket.cpp  SocketImpl.hpp  UdpSocket.cpp
libraries/core/src/network/Unix/: SocketImpl.cpp  SocketImpl.hpp
libraries/core/src/network/Win32/: SocketImpl.cpp  SocketImpl.hpp
libraries/core/src/operations/: Operation.cpp  OperationDispatcher.cpp  OperationMainThread.cpp  OperationManager.cpp  OperationThread.cpp  SimpleOperation.cpp
libraries/core/src/tools/: JsonConfig.cpp  ParsedCommandLine.cpp  TimeState.cpp  Timer.cpp  Utils.cpp
libraries/imgui-glfw-opengl3/: CMakeLists.txt
mouse-android-emulator/demo/mouse-handling/: CMakeLists.txt  main.cpp
mouse-android-emulator/demo/networking/client/client-core/: CMakeLists.txt
mouse-android-emulator/demo/networking/client/client-core/include/: RemoteApplicationBase.h  RemoteApplicationBridge.h
mouse-android-emulator/demo/networking/client/client-core/src/: RemoteApplicationBridge.cpp
mouse-android-emulator/demo/networking/client/event-dispatcher/: CMakeLists.txt  Listener.cpp
mouse-android-emulator/demo/networking/client/event-dispatcher/android/: build.gradle
mouse-android-emulator/demo/networking/client/event-dispatcher/include/: EventDispatcherApplication.h  EventDispatcherRemoteApplication.h
mouse-android-emulator/demo/networking/client/event-dispatcher/src/: EventDispatcherApplication.cpp  EventDispatcherRemoteApplication.cpp
mouse-android-emulator/demo/networking/client/event-receiver/: CMakeLists.txt  EventReceiver.cpp
mouse-android-emulator/demo/networking/client/event-receiver/include/: EventReceiverRemoteApplication.h
mouse-android-emulator/demo/networking/client/event-receiver/src/: EventReceiverApplication.cpp  EventReceiverRemoteApplication.cpp
mouse-android-emulator/demo/networking/client/listener/: CMakeLists.txt  Listener.cpp
mouse-android-emulator/demo/networking/client/listener/include/: ListenerApplication.h  RemoteApplication.h  RemoteApplicationBridge.h
mouse-android-emulator/demo/networking/client/listener/src/: ListenerApplication.cpp  RemoteApplication.cpp  RemoteApplicationBridge.cpp
mouse-android-emulator/demo/networking/client/writer/: CMakeLists.txt  Writer.cpp
mouse-android-emulator/demo/networking/emulator/: CMakeLists.txt
mouse-android-emulator/demo/networking/emulator/include/: Emulator.h  EmulatorDelegate.h
mouse-android-emulator/demo/networking/emulator/src/: Emulator.cpp
mouse-android-emulator/demo/networking/network/network-api/: CMakeLists.txt
mouse-android-emulator/demo/networking/network/network-api/include/: NetworkInterface.h  NetworkOptions.h
mouse-android-emulator/demo/networking/network/network-api/src/: NetworkInterface.cpp  NetworkOptions.cpp
mouse-android-emulator/demo/networking/network/network-core/: CMakeLists.txt
mouse-android-emulator/network/protopackets/: CMakeLists.txt  compile.py
mouse-android-emulator/network/protopackets/cpp-protocol/: PacketsId.pb.cc
mouse-android-emulator/network/protopackets/protocol/: Main.proto
projects/mouse-android-emulator/event-dispatcher/: CMakeLists.txt  EventDispatcher.cpp
projects/mouse-android-emulator/event-dispatcher/android/: build.gradle  settings.gradle
projects/mouse-android-emulator/event-dispatcher/android/app/: build.gradle
projects/mouse-android-emulator/event-dispatcher/include/: ApplicationInputInterface.h  ApplicationOutputInterface.h  EventDispatcherApplication.h  EventDispatcherRemoteApplication.h  JniImpl.h  NativeJniBridge.h
projects/mouse-android-emulator/event-dispatcher/src/: EventDispatcherApplication.cpp  EventDispatcherRemoteApplication.cpp  JniImpl.cpp  JniStub.cpp  NativeJniBridge.cpp
projects/mouse-android-emulator/event-receiver/: CMakeLists.txt  EventReceiver.cpp
projects/mouse-android-emulator/event-receiver/include/: EventReceiverApplication.h  EventReceiverRemoteApplication.h
projects/mouse-android-emulator/event-receiver/src/: EventReceiverApplication.cpp  EventReceiverRemoteApplication.cpp
projects/mouse-android-emulator/network/network-core/: CMakeLists.txt
projects/mouse-android-emulator/network/network-core/include/: PackageManager.h  Peer.h
projects/mouse-android-emulator/network/network-core/src/: NetworkInterface.cpp  PackageManager.cpp  PacketHandlerOperation.cpp  Peer.cpp  PeerConnection.cpp
projects/mouse-android-emulator/network/protopackets/: CMakeLists.txt  compile.py
projects/mouse-android-emulator/network/protopackets/cpp-protocol/: CMakeLists.txt  Connection.pb.cc  Connection.pb.h  Main.pb.cc  Main.pb.h  PacketsId.pb.cc  PacketsId.pb.h
projects/mouse-android-emulator/network/protopackets/protocol/: Connection.proto  Main.proto  PacketsId.proto
projects/top-down-view-shooter/: CMakeLists.txt
projects/top-down-view-shooter/data/: imgui.ini  vertex_shader.glsl
projects/top-down-view-shooter/include/: shader.h
projects/top-down-view-shooter/src/: main.cpp
top-down-view-shooter/: CMakeLists.txt
top-down-view-shooter/data/: fragment_shader.glsl  fragment_shader_1.glsl  fragment_shader_2.glsl  imgui.ini  vertex_shader.glsl
top-down-view-shooter/include/: shader.h
top-down-view-shooter/src/: main.cpp  shader.cpp
(+111 files in other folders)
